--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
+    "lucide-react": "^0.377.0",
+    "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
+    "react-collapse": "^5.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.0",
+    "swiper": "^11.1.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "postcss": "^8",
